# DentalImageSystem

./: .gitignore  DentalImaging.spec  LICENSE  README.md  RunDentalImaging.bat  build_exe.bat  dental_imaging_workflow.md  kiosk_main.py  project_requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt
app/: app_settings.py  bridge.py  camera_service.py  main.py  provider.py  runtime_paths.py  serial_service.py  view_transforms.py
app/camera_core/: __init__.py
app/qml/: BottomBar.qml  ImageSettingsPanel.qml  RightRail.qml  SettingsPanel.qml  Toast.qml  TopBar.qml  main.qml
config/: camera_defaults.json  default_config.json  led_presets.json  storage_config.json
dental_imaging/: __init__.py  __main__.py  main.py
dental_imaging/core/: __init__.py  config_manager.py
dental_imaging/exceptions/: __init__.py  camera_exceptions.py
dental_imaging/hardware/: __init__.py
dental_imaging/image_processing/: __init__.py  color_adjustments.py
dental_imaging/models/: __init__.py  camera_config.py
dental_imaging/settings/: __init__.py  app_settings.py
dental_imaging/storage/: __init__.py  snapshot_writer.py
dental_imaging/ui/: __init__.py  bridge.py  camera_provider.py  camera_settings_dialog.py  (+5 more)
docs/: BUILD_EXE.md  CLIENT_USER_GUIDE.md  PROJECT_DELIVERABLES.md  README.md  requirements_implementation_status.md
resources/: README.md
scripts/: README.md  adjust_camera_brightness.py  diagnose_camera_settings.py  run_preview.py  test_camera_connection.py  test_camera_detection.py  test_camera_preview.py
tests/: __init__.py  conftest.py
(+61 files in other folders)
